(library
   (name layout)
   (modules
      ast
      classes
      eval
      lens
      lexer
      parser
      parser_util
      tests
      types
      util
      util_pp)
   (libraries ppx_deriving)
   (preprocess
      (pps
         ppx_deriving.show
         ppx_deriving.eq
         ppx_deriving.ord)))

(env
   (dev
      (flags (:standard -w -23-33-38-39-66 ))))

(ocamllex
   (modules lexer))

(menhir
   (modules parser)
   (flags --explain))