(library
   (name layout)
   (public_name layout)
   (inline_tests (flags -verbose))
   (modules
      ast
      classes
      eval
      lens
      lexer
      parser
      parser_util
      tests
      types
      util
      util_pp)
   (libraries ppx_deriving ppx_inline_test)
   (preprocess
      (pps
         ppx_deriving.show
         ppx_deriving.eq
         ppx_deriving.ord
         ppx_inline_test)))

(env
   (dev 
      (flags (:standard 
         -w -23-33-38-39-66
         -rectypes))))

(ocamllex
   (modules lexer))

(menhir
   (modules parser)
   (flags --explain))

(rule
   (alias top)
   (action (chdir %{project_root}
      (run dune utop . -- -rectypes))))