(library
   (name layout)
   (public_name layout)
   (inline_tests (flags -verbose))
   (modules
      analysis
      ast
      classes
      compiler
      eval
      lexer
      parser
      parser_util
      tests
      types
      util
      util_pp)
   (libraries ppx_deriving ppx_inline_test)
   (preprocess
      (pps
         ppx_deriving.show
         ppx_deriving.eq
         ppx_deriving.ord
         ppx_inline_test)))

(env
   (dev
      (flags (:standard -w -23-33-38-39-66 -rectypes))
      (ocamlopt_flags (:standard -O3)))

   (afl
      (flags (:standard -w -23-33-38-39-66 -rectypes))
      (ocamlopt_flags (:standard -g -afl-instrument))))

(ocamllex
   (modules lexer))

(menhir
   (modules parser)
   (flags --explain))

(rule
   (alias top)
   (action (chdir %{project_root}
      (run dune utop . -- -rectypes))))