
(executable
   (name lti)
   (modules lti)
   (libraries layout stdio)
   (modes native))

(executable
   (name lcc)
   (modules lcc)
   (libraries layout stdio)
   (modes native))


(env
    (dev
        (flags (:standard))
        (ocamlopt_flags 
            (:standard 
             -O3 -afl-instrument
             -cc afl-clang )))
    (release
        (flags (:standard))
        (ocamlopt_flags (:standard -O3))))