
(executable
   (name lti)
   (modules lti)
   (libraries layout stdio)
   (modes byte native))

(executable
   (name lcc)
   (modules lcc)
   (libraries layout stdio)
   (modes byte native))

(env
   (dev
      (flags (:standard -w -23-33-38-39-66 -rectypes))
      (ocamlopt_flags (:standard -O3)))

   (afl
      (flags (:standard -w -23-33-38-39-66 -rectypes))
      (ocamlopt_flags 
        (:standard 
            -g -O3 
            -afl-instrument
            -cc afl-clang ))))